fixed layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,19 +31,19 @@ body {
   width: 100vw;
   justify-content: space-between;
   align-items: center;
+  font-size: 3vw;
 }
 
 .navbar ul {
   list-style: none;
   display: flex;
-  font-size: 3vw;
 }
 
 
 .navbar a {
   color: #fff;
   text-decoration: none;
-  font-size: vw;
+  /* font-size: vw; */
 }
 
 .navbar a:hover {
